쿠키, 세션 로그인 기능

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
             <button class="w-100 btn btn-secondary btn-lg" type="button"
                     th:onclick="|location.href='@{/members/add}'|">
                 회원 가입
-            </button>R
+            </button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-dark btn-lg"
